<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified1"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified2"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified3"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified4"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified5"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified6"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified7"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified8"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified9"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_popup10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/send_da_ti_qualified10"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/send_da_ti_task_qualified_return"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/share_return"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

</LinearLayout>
