<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.bindphonenumber.activity.BindPhoneNumberActivity">

    <TextView
        android:id="@+id/bing_phone_number_return_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_5"
        android:paddingTop="@dimen/dp_33"
        android:text="@string/share_return"
        android:textColor="@color/blue_05c"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_23"
        android:gravity="center_horizontal"
        android:text="@string/bind_phone_number"
        android:textColor="@color/black_000"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_27"
        android:layout_marginRight="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@mipmap/wang_ji_bg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/_86"
            android:textColor="@color/blue_05c"
            android:textSize="@dimen/sp_18" />

        <EditText
            android:id="@+id/bing_phone_number_phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contiact"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/bing_phone_number_xie_yi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu_wu_xie_yi"
            android:textColor="@color/blue_05c"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <Button
        android:id="@+id/bing_phone_number_next_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_27"
        android:layout_marginRight="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/home_jing_pin_shape"
        android:text="@string/next"
        android:textColor="@color/white_fff"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

</LinearLayout>