<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gz_popup_layout_xiang_mu_fang_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/xiang_mo_fang"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/gz_popup_layout_jiao_yi_suo_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/jiao_yi_suo"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/gray_f2" />

    <TextView
        android:id="@+id/gz_popup_layout_return_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/share_return"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_13" />

</LinearLayout>
