<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2"
    android:orientation="vertical"
    tools:context=".ui.setting.activity.ContactUsActivity">

    <include layout="@layout/title_layout" />
    <!--币风官网-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="fitXY"
            android:src="@mipmap/guan_wang_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/website"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/website_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_weight="1"
            android:text="@string/website_tv"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/website_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/home_jing_pin_shape"
            android:paddingBottom="@dimen/dp_4_5"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_4_5"
            android:text="@string/dian_fuzhi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_97" />
    <!--在线客服-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="fitXY"
            android:src="@mipmap/ke_fu_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/customer_service"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/customer_service_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_weight="1"
            android:text="@string/customer_service_tv"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/customer_service_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/home_jing_pin_shape"
            android:paddingBottom="@dimen/dp_4_5"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_4_5"
            android:text="@string/dian_fuzhi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_97" />
    <!--商务合作-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="fitXY"
            android:src="@mipmap/website_weixin_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/website_weixin"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/website_weixin_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_weight="1"
            android:text="@string/website_weixin_tv"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/website_weixin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/home_jing_pin_shape"
            android:paddingBottom="@dimen/dp_4_5"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_4_5"
            android:text="@string/dian_fuzhi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_97" />
    <!--商务合作-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="fitXY"
            android:src="@mipmap/website_weixin_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/customer_service_email"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/customer_service_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_weight="1"
            android:text="@string/customer_service_email_tv"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/customer_service_email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/home_jing_pin_shape"
            android:paddingBottom="@dimen/dp_4_5"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_4_5"
            android:text="@string/dian_fuzhi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
</LinearLayout>